<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticleDetailActivity">


    <ImageView
        android:id="@+id/noteimgme"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/noteimg"
        app:layout_constraintBottom_toTopOf="@+id/notedetailtitletv"
        android:layout_width="50dp"
        android:layout_height="50dp" />


    <TextView
        android:id="@+id/notedetailtitletv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="Title :"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteimgme"
        app:layout_constraintBottom_toTopOf="@+id/edititle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/edititle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="Enter a title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notedetailtitletv"
        app:layout_constraintBottom_toTopOf="@+id/notedetailtitlecontenttv"
        android:layout_width="match_parent"
        android:layout_height="50dp" />



    <TextView
        android:id="@+id/notedetailtitlecontenttv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="Content : "
        android:paddingLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edititle"
        app:layout_constraintBottom_toTopOf="@+id/scrollviewdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollviewdetail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notedetailtitlecontenttv"
        app:layout_constraintBottom_toTopOf="@+id/done"
        android:layout_margin="10dp"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <EditText
            android:id="@+id/entrycontenttext"
            android:layout_width="match_parent"
            android:hint="Touch here and Enter a content ,tought,emotion"
            android:layout_height="match_parent" />

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/done"
        android:text="UPDATE"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollviewdetail"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</android.support.constraint.ConstraintLayout>