<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="editentry"
        android:id="@+id/signout"
        android:iconTint="@android:color/white"
        app:showAsAction="always"
        android:icon="@drawable/exitout" />

</menu>