...
        tools:text="Welcome in : "
        android:gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/gennote"
        app:layout_constraintBottom_toTopOf="@+id/notesrecyclerview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="60dp" />
    
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/notesrecyclerview"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/addnotesbtn"
        app:layout_constraintTop_toBottomOf="@+id/userinfos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_notification"
...
