...

    <ImageView
        android:id="@+id/loginlogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signin_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/journalapp"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/loginlogo"
...
